# pybinding

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  MANIFEST.in  changelog.md  license.md  readme.md  readthedocs.yml  setup.cfg  setup.manifest  setup.py
.github/workflows/: tests.yml
cmake/: FindEigen3.cmake  FindEigen3orDownload.cmake  FindMKL.cmake
cppcore/: CMakeLists.txt
cppcore/cmake/: FindEigen3orDownload.cmake  catch.cmake  cppformat.cmake  download.cmake  eigen.cmake  fmt.cmake  mkl.cmake  simdpp.cmake  variant.cmake  warnings.cmake
cppcore/cuda/: CMakeLists.txt  thrust.hpp  traits.cuh
cppcore/cuda/kpm/: calc_moments.cu  calc_moments.hpp
cppcore/include/: KPM.hpp  Lattice.hpp  Model.hpp
cppcore/include/compute/: detail.hpp  kernel_polynomial.hpp  lanczos.hpp  linear_algebra.hpp
cppcore/include/compute/eigen3/: kernel_polynomial.hpp  lanczos.hpp  linear_algebra.hpp
cppcore/include/compute/mkl/: kernel_polynomial.hpp  lanczos.hpp  linear_algebra.hpp  wrapper.hpp
cppcore/include/detail/: algorithm.hpp  config.hpp  macros.hpp  opaque_alias.hpp  slice.hpp  strategy.hpp  sugar.hpp  thread.hpp  typelist.hpp
cppcore/include/greens/: Greens.hpp  KPM.hpp
cppcore/include/greens/KPM/: Bounds.hpp  Stats.hpp
cppcore/include/greens/kpm/: Moments.hpp  OptimizedHamiltonian.hpp  OptimizedSizes.hpp  Stats.hpp  calc_moments.hpp  calc_moments_cuda.hpp
cppcore/include/hamiltonian/: Hamiltonian.hpp  HamiltonianModifiers.hpp
cppcore/include/kpm/: Bounds.hpp  Config.hpp  Core.hpp  DefaultStrategy.hpp  Kernel.hpp  Moments.hpp  OptimizedHamiltonian.hpp  OptimizedSizes.hpp  Starter.hpp  Stats.hpp  Strategy.hpp  calc_moments.hpp  reconstruct.hpp  starters.hpp
cppcore/include/kpm/default/: Compute.hpp  collectors.hpp
cppcore/include/leads/: HamiltonianPair.hpp  Leads.hpp  Spec.hpp  Structure.hpp
cppcore/include/numeric/: arrayref.hpp  constant.hpp  dense.hpp  ellmatrix.hpp  random.hpp  sparse.hpp  sparseref.hpp  traits.cuh  traits.hpp
cppcore/include/solver/: FEAST.hpp  Solver.hpp
cppcore/include/support/: arrayref.hpp  cpp14.hpp  cppfuture.hpp  dense.hpp  format.hpp  physics.hpp  simd.hpp  sparse.hpp  sparseref.hpp  thread.hpp  traits.hpp  uref.hpp  variant.hpp
cppcore/include/system/: CompressedSublattices.hpp  Foundation.hpp  Generators.hpp  HoppingBlocks.hpp  Lattice.hpp  Lead.hpp  Registry.hpp  Shape.hpp  StructureModifiers.hpp  Symmetry.hpp  System.hpp  SystemModifiers.hpp
cppcore/include/utils/: Chrono.hpp  Log.hpp
cppcore/src/: KPM.cpp  Lattice.cpp  Model.cpp
cppcore/src/greens/: Greens.cpp  KPM.cpp
cppcore/src/greens/KPM/: Bounds.cpp
cppcore/src/greens/kpm/: Bounds.cpp  OptimizedHamiltonian.cpp  calc_moments.cu
cppcore/src/hamiltonian/: Hamiltonian.cpp  HamiltonianModifiers.cpp
cppcore/src/kpm/: Bounds.cpp  Core.cpp  DefaultStrategy.cpp  Kernel.cpp  Moments.cpp  OptimizedHamiltonian.cpp  Starter.cpp  Stats.cpp  Strategy.cpp
cppcore/src/kpm/default/: Compute.cpp  collectors.cpp
cppcore/src/leads/: Leads.cpp  Spec.cpp  Structure.cpp
cppcore/src/solver/: FEAST.cpp  Solver.cpp
cppcore/src/system/: CompressedSublattices.cpp  Foundation.cpp  HoppingBlocks.cpp  Lattice.cpp  Lead.cpp  Registry.cpp  Shape.cpp  StructureModifiers.cpp  Symmetry.cpp  System.cpp  SystemModifiers.cpp
cppcore/src/utils/: Chrono.cpp  Log.cpp
cppcore/tests/: CMakeLists.txt  fixtures.cpp  fixtures.hpp  test_compute.cpp  test_detail.cpp  test_greens.cpp  test_kpm.cpp  test_lattice.cpp  test_leads.cpp  test_modifiers.cpp  test_numeric.cpp  test_shape.cpp  test_support.cpp  test_system.cpp
cppmodule/: CMakeLists.txt
cppmodule/include/: cast.hpp  resolve.hpp  thread.hpp  wrappers.hpp
cppmodule/src/: greens.cpp  kpm.cpp  lattice.cpp  leads.cpp  main.cpp  model.cpp  modifiers.cpp  parallel.cpp  shape.cpp  solver.cpp  system.cpp  wrapper_tests.cpp
cppwrapper/: CMakeLists.txt
cppwrapper/cmake/: FindNumPy.cmake
cppwrapper/include/: eigen3_converters.hpp  python_support.hpp
cppwrapper/src/: greens.cpp  hamiltonian.cpp  leads.cpp  main.cpp  model.cpp  parallel.cpp  solver.cpp  system.cpp
docs/: CMakeLists.txt  api.rst  conf.py  index.rst  install.rst  intro.rst  nbexport.py  readme.md  test_examples.py
docs/_ext/: generate.py  nbexport.py
docs/_static/: extra.css
docs/advanced/: index.rst  kwant.rst  kwant_example.py  lattice.rst  multiorbital.rst  shapes.rst
docs/api/: constants.rst  greens.rst  index.rst  lattice.rst  leads.rst  model.rst  modifier.rst  parallel.rst  pltutils.rst  results.rst  shape.rst  solver.rst  system.rst
docs/benchmarks/: index.rst  system_build.py
docs/examples/: index.rst  kpm.py
docs/experimental/: cuda.rst  feast.rst  generator.rst  index.rst  twisted_bilayer.py
docs/install/: advanced.rst  index.rst  quick.rst
docs/materials/: graphene.rst  group6_tmd.rst  index.rst  phosphorene.rst
docs/plotting/: index.rst  spatialmap.rst  structure.rst  structuremap.rst
docs/tutorial/: bands.rst  bands_example.py  fields.rst  fields_example.py  finite.rst  finite_example.py  generators.rst  greens.rst  import.rst  index.rst  kpm.rst  lattice.rst  lattice_example.py  scattering.rst  shape_symmetry.rst  shape_symmetry_example.py  solvers.rst  strain.rst  strain_example.py  twisted_heterostructures.py
include/: Model.hpp
include/compute/: kernel_polynomial.hpp  lanczos.hpp
pybinding/: __about__.py  __init__.py  chebyshev.py  constant.py  constants.py  electric.py  greens.py  hamiltonian.py  lattice.py  leads.py  magnetic.py  model.py  modifier.py  parallel.py  pltutils.py  result.py  results.py  shape.py  solver.py  symmetry.py  system.py
src/: Model.cpp
support/: deploy.sh  readme.md  rtd_environment.yml  rtd_requirements.txt  travis_cmake.sh  travis_deploy.sh  travis_general.sh  travis_miniconda.sh
tests/: conftest.py  local.cfg  test_examples.py  test_kpm.py  test_kwant.py  test_lattice.py  test_leads.py  test_model.py  test_modifiers.py  test_parallel.py  test_pickle.py  test_results.py  test_shape.py  test_solver.py  test_system.py  test_wrapper.py
(+196 files in other folders)
